fixes dark mode styles

--- a/src/app/learning-modules/drag-drop-example/drag-drop-example.component.scss
+++ b/src/app/learning-modules/drag-drop-example/drag-drop-example.component.scss
@@ -113,6 +113,9 @@
       }
 
       .play-button {
+        font-size: 2rem;
+        height: 2rem;
+        width: 2rem;
         margin-left: 15px;
         flex: 0 0 auto;
         align-self: center;
