--- a/src/app/learning-modules/phrase-builder/phrase-builder.component.scss
+++ b/src/app/learning-modules/phrase-builder/phrase-builder.component.scss
@@ -24,6 +24,9 @@
     margin-top: 0;
 
     .play-button {
+      font-size: 2rem;
+      height: 2rem;
+      width: 2rem;
       margin-left: 15px;
       align-self: center;
       flex: 0 0 auto;
