--- a/src/app/learning-modules/word-learning-example/word-learning-example.component.scss
+++ b/src/app/learning-modules/word-learning-example/word-learning-example.component.scss
@@ -45,6 +45,9 @@
     }
 
     .play-button {
+      font-size: 2rem;
+      height: 2rem;
+      width: 2rem;
       margin-left: 15px;
       align-self: center;
       flex: 0 0 auto;
